# magic-ring-buffer

./: Cargo.toml  LICENSE  README.md
src/: CompareExchangeOnlyEverIncreasesMonotonicallyOffset.rs  LargeRingQueue.rs  LargeRingQueueCreationError.rs  LargeRingQueueElement.rs  LargeRingQueueInitialization.rs  MagicRingBuffer.rs  MirroredMemoryMap.rs  MirroredMemoryMapCreationError.rs  OnlyEverIncreasesMonotonicallyOffset.rs  ReferenceCountedLargeRingQueue.rs  ReferenceCountedLargeRingQueueElement.rs  RemovedTemporaryFileDescriptor.rs  Size.rs  VirtualAddress.rs  lib.android_linux.rs  lib.rs
src/memory_sizes/: MemorySize.rs  MemorySize16Kb.rs  MemorySize16Mb.rs  MemorySize1Gb.rs  MemorySize1Mb.rs  MemorySize256Kb.rs  MemorySize256Mb.rs  MemorySize4Kb.rs  MemorySize4Mb.rs  MemorySize64Kb.rs  MemorySize64Mb.rs  memory_size.rs  mod.rs
