# This file is part of magic-ring-buffer. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/magic-ring-buffer/master/COPYRIGHT. No part of magic-ring-buffer, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of magic-ring-buffer. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/magic-ring-buffer/master/COPYRIGHT.


[package]
name = "magic-ring-buffer"
description = "A magic ring buffer (also known as a virtual ring buffer, VRB, or mirrored buffer) which is lock-free for multiple producers and a single consumer."
keywords = ["ring", "buffer", "magic", "virtual", "mirrored"]
categories = ["concurrency", "data-structures"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/magic-ring-buffer"
repository = "https://github.com/lemonrock/magic-ring-buffer.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
edition = "2018"
version = "0.2.0"

[dependencies]
static_assertions = "^1.1"

[target.'cfg(target_os = "linux")'.dependencies]
likely = { version = "^0.2.0", path = "../likely" }
linux-support = { path = "../linux-support", version = "0.0.2" }
swiss-army-knife = { version = "0.0.0", path = "../swiss-army-knife" }
